[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/main_menu.gd" type="Script" id=1]
[ext_resource path="res://scripts/debug_overlay.gd" type="Script" id=2]

[node name="MainMenu" type="Control"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource(1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.4
anchor_top = 0.4
anchor_right = 0.6
anchor_bottom = 0.6

[node name="StartButton" type="Button" parent="VBoxContainer"]
text = "Start"

[node name="StartMap2Button" type="Button" parent="VBoxContainer"]
text = "Start Map 2"

[node name="RosterButton" type="Button" parent="VBoxContainer"]
text = "Roster"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
text = "Quit"

[node name="DebugOverlay" type="Control" parent="."]
script = ExtResource(2)
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
